--- a/src/main/resources/templates/localGroupDetails.html
+++ b/src/main/resources/templates/localGroupDetails.html
@@ -730,11 +730,11 @@
                         </thead>
                         <tbody th:remove="all-but-first">
                             <tr th:each="project : ${localGroup.projects}">
-                                <td th:text="${project.value.name}">Puppenstuben gesucht!</td>
-                                <td th:text="|${{project.value.startTime}} - ${{project.value.endTime}}|">2016 - 2019</td>
-                                <td th:text="${project.value.contributorsCount}">7</td>
-                                <td><a href="#" th:if="${project.value.nextEvent}" th:href="@{'/events/' + {project.value.nextEvent.id}}" th:text="${project.value.nextEvent.name}">Mahdeinsatz auf dem Dachsenberg</a><span th:unless="${project.value.nextEvent}">---</span></td>
-                                <td><a href="projectDetails.html" th:href="@{'/projects/' + ${project.value.id}}">Details</a></td>
+                                <td th:text="${project.name}">Puppenstuben gesucht!</td>
+                                <td th:text="|${{project.startTime}} - ${{project.endTime}}|">2016 - 2019</td>
+                                <td th:text="${project.contributorsCount}">7</td>
+                                <td><a href="#" th:if="${project.nextEvent}" th:href="@{'/events/' + {project.nextEvent.id}}" th:text="${project.nextEvent.name}">Mahdeinsatz auf dem Dachsenberg</a><span th:unless="${project.nextEvent}">---</span></td>
+                                <td><a href="projectDetails.html" th:href="@{'/projects/' + ${project.id}}">Details</a></td>
                             </tr>
                             <tr>
                                 <td>Brutvogelkartierung Dresdner Heide</td>
