#39 - Fix outdated NabuMembership in EditPersonForm
Closes #39

--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -140,7 +140,7 @@
                           <label for="add-person-nabu" class="col-sm-3 control-label">NABU-Mitglied</label>
                           <div class="col-sm-9">
                               <div class="input-group" id="add-person-nabu">
-                                  <select class="selectpicker form-control" name="nabuMember" id="add-person-isNabuMember" data-width="40%" th:field="*{{nabuMember}}">
+                                  <select class="selectpicker form-control" name="nabuMember" id="add-person-isNabuMember" data-width="40%" th:field="*{{nabuMembershipStatus}}">
                                     <option value="UNKNOWN">Unbekannt</option>
                                     <option value="IS_MEMBER">NABU-Mitglied</option>
                                     <option value="NO_MEMBER">Kein Mitglied</option>
