--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -360,7 +360,7 @@
     </header>
 
     <!-- the 'real' content finally -->
-    <section id="content" class="tab-content" style="margin-top: 2em;">
+    <section id="content" class="tab-content" style="margin-top: 2em; padding: 0 25px;">
 
             <h1>Veranstaltungen</h1>
 
