#30 - Re-add editing and display of the activist profile

--- a/src/main/resources/templates/persons/personDetailsOverview.html
+++ b/src/main/resources/templates/persons/personDetailsOverview.html
@@ -64,10 +64,6 @@
 
           <div class="col-md-2 category-menu">
 
-            <!-- TODO if the person is a participant, create a two-column dialog featuring the
-                 general data on one side and the participant-related on another
-             -->
-
             <button type="button" class="btn btn-default btn-sm pull-right" data-toggle="modal"
                     data-target="#edit-person-dialog">
               <span class="glyphicon glyphicon-pencil"></span> Anpassen
@@ -263,9 +259,11 @@
                     </form>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen
+                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                      Abbrechen
                     </button>
-                    <button type="submit" form="edit-person" class="btn btn-primary">Aktualisieren
+                    <button type="submit" form="edit-person" class="btn btn-primary">
+                      Aktualisieren
                     </button>
                   </div>
                 </div>
