--- a/src/main/resources/templates/persons/personDetails.html
+++ b/src/main/resources/templates/persons/personDetails.html
@@ -53,7 +53,7 @@
         <a href="#overview" class="tab-controller" aria-controls="general" role="tab"
            data-toggle="tab">Allgemeine Infos</a>
       </li>
-      <li role="presentation" th:classappend="${tab == 'activst-referent'} ? 'active'">
+      <li role="presentation" th:classappend="${tab == 'activist-referent'} ? 'active'">
         <a href="#activist-referent" class="tab-controller"
            aria-controls="activist-referent" role="tab" data-toggle="tab">Aktiven +
           Referenteninfos</a>
@@ -102,7 +102,8 @@
       </section>
 
       <!-- referent profile -->
-      <section class="display-category" id="referent">
+      <section class="lazy-load display-category" id="referent"
+               th:attr="data-load=@{/persons/{id}/referent-profile(id=${person.id})}">
         <div class="row">
           <h2>Referierenden-Infos</h2>
         </div>
