--- a/src/main/resources/templates/persons/activistProfile.html
+++ b/src/main/resources/templates/persons/activistProfile.html
@@ -58,7 +58,7 @@
         <div class="row category-header">
           <h2 class="col-md-10">Aktiven-Profil</h2>
 
-          <div class="col-md-2 category-menu">
+          <div class="col-md-2 category-menu" th:if="${activist}">
             <button type="button" class="btn btn-default btn-sm pull-right" data-toggle="modal"
                     data-target="#edit-activist-dialog">
               <span class="glyphicon glyphicon-pencil"></span> Anpassen
